{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 37,
  "lineage": "e6c5260a-95eb-a2c8-23ca-0fb18641a29a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_public_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3140426886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03126ce20de74a7e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186492513069:internet-gateway/igw-034cab4251f3d0a97",
            "id": "igw-034cab4251f3d0a97",
            "owner_id": "186492513069",
            "tags": {
              "Environment": "dev",
              "KubernetesCluster": "k3s-demo",
              "Name": "dev-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/k3s-demo": "owned"
            },
            "vpc_id": "vpc-0d2bdcf3335e32c69"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-034cab4251f3d0a97",
            "id": "r-rtb-07bc1136f4b67676a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bc1136f4b67676a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.dev-vpc.aws_internet_gateway.this",
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07bc1136f4b67676a",
            "owner_id": "186492513069",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "KubernetesCluster": "k3s-demo",
              "Name": "dev-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/k3s-demo": "owned"
            },
            "vpc_id": "vpc-0d2bdcf3335e32c69"
          },
          "dependencies": [
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ef8a8ae1e2269e",
            "route_table_id": "rtb-07bc1136f4b67676a",
            "subnet_id": "subnet-022cd6511d5315cae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0171682c3fa55747b",
            "route_table_id": "rtb-07bc1136f4b67676a",
            "subnet_id": "subnet-01ea7040d2963e9a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ef2f97a31b2448d",
            "route_table_id": "rtb-07bc1136f4b67676a",
            "subnet_id": "subnet-08226464de1d222fb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dev-vpc.aws_route_table.public",
            "module.dev-vpc.aws_subnet.public",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186492513069:subnet/subnet-022cd6511d5315cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-022cd6511d5315cae",
            "map_public_ip_on_launch": true,
            "owner_id": "186492513069",
            "tags": {
              "Environment": "dev",
              "KubernetesCluster": "k3s-demo",
              "Name": "dev-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/k3s-demo": "owned"
            },
            "vpc_id": "vpc-0d2bdcf3335e32c69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186492513069:subnet/subnet-01ea7040d2963e9a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-01ea7040d2963e9a7",
            "map_public_ip_on_launch": true,
            "owner_id": "186492513069",
            "tags": {
              "Environment": "dev",
              "KubernetesCluster": "k3s-demo",
              "Name": "dev-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/k3s-demo": "owned"
            },
            "vpc_id": "vpc-0d2bdcf3335e32c69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186492513069:subnet/subnet-08226464de1d222fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-08226464de1d222fb",
            "map_public_ip_on_launch": true,
            "owner_id": "186492513069",
            "tags": {
              "Environment": "dev",
              "KubernetesCluster": "k3s-demo",
              "Name": "dev-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/k3s-demo": "owned"
            },
            "vpc_id": "vpc-0d2bdcf3335e32c69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.dev-vpc.aws_vpc.this",
            "module.dev-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186492513069:vpc/vpc-0d2bdcf3335e32c69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037fda3a03fa1f128",
            "default_route_table_id": "rtb-0a0a730ff9ce8be09",
            "default_security_group_id": "sg-03126ce20de74a7e6",
            "dhcp_options_id": "dopt-606db80b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d2bdcf3335e32c69",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0a730ff9ce8be09",
            "owner_id": "186492513069",
            "tags": {
              "Environment": "dev",
              "KubernetesCluster": "k3s-demo",
              "Name": "dev-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/k3s-demo": "owned"
            }
          }
        }
      ]
    }
  ]
}